--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         <!-- junit -->
         <junit.version>4.12</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
+
+        <lombok.version>1.16.6</lombok.version>
+
+        <pagehelper.version>4.0.1</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -72,6 +76,20 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
     </dependencies>
 
